# CicmWrapper

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  Makefile.am  README.md  a00001.html  a00001_source.html  a00002.html  a00003.html  a00004.html  a00004_source.html  a00005.html  a00005_source.html  a00006.html  a00006_source.html  a00007.html  a00007_source.html  a00008.html  a00008_source.html  a00009.html  a00009_source.html  a00010.html  a00010_source.html  a00011.html  a00011_source.html  a00012.html  a00012_source.html  a00013.html  a00013_source.html  a00014.html  a00014_source.html  a00015.html  a00015_source.html  a00016.html  a00016_source.html  a00017.html  a00017_source.html  a00018.html  (+177 more)
Caramel/builds/: c.convolve~-help.pd  c.convolve~.pd_darwin  c.fourierconvolve~-help.pd  c.fourierconvolve~.pd_darwin  c.freeverb~-help.pd  c.freeverb~.pd_darwin  c.timeconvolve~-help.pd  c.timeconvolve~.pd_darwin  c.zeroconvolve~-help.pd
Caramel/c.convolve/: c.convolve~.cpp
Caramel/c.forurierconvolve/: c.fourierconvolve~.cpp
Caramel/c.freeverb/: c.freeverb~.cpp
Caramel/c.timeconvolve/: c.timeconvolve~.cpp
Caramel/c.zeroconvolve/: c.convolve~.cpp
Chocolate/: @chocolate.sln  @chocolate.workspace  @chocolate.workspace.layout  README.md
Chocolate/builds/: @Chocolate.pd  EzPatchs  c.bang-help.pd  c.bang.pd_darwin  c.bang.pd_linux  c.blackboard.pd_darwin  c.breakpoints-help.pd  c.breakpoints.pd_darwin  c.colorpanel-help.pd  c.colorpanel.pd_darwin  c.gain~-help.pd  c.gain~.pd_darwin  c.incdec.pd_darwin  c.incdec.pd_linux  c.knob.pd_darwin  c.menu.pd_darwin  c.meter~.pd_darwin  c.meter~.pd_linux  c.number.pd_darwin  c.number~.pd_darwin  c.plane.pd_darwin  c.preset.pd_darwin  c.radio.pd_darwin  c.rslider-help.pd  c.rslider.pd_darwin  c.scope~.pd_darwin  c.slider.pd_darwin  c.spectrum~-help.pd  c.spectrum~.pd_darwin  c.subcanvas-help.pd  c.subcanvas.pd_darwin  c.tab.pd_darwin  c.tab.pd_linux  c.toggle.pd_darwin  subcnv.pd  zaza.pd
Chocolate/c.array/: c.array.cpp
Chocolate/c.bang/: c.bang.cbp  c.bang.cpp  (+2 more)
Coffee/: @coffee.workspace.layout  README.md
CreamLibrary/: README.md  c.library.cbp  c.library.cpp  c.library.depend  c.library.h  c.library.layout  c.library.sln  c.library.vcxproj  c.library.vcxproj.filters
Dev/: efft.c
Documentation/: Doxyfile  mainpage.dox
EzPatchs/: EzDacMono-help.pd  EzDacMono.pd  EzDacStereo-help.pd  EzDacStereo.pd  EzDsp-help.pd  EzDsp.pd  EzSound-help.pd  EzSound.pd
JuceWrapper/: epd.h  estruct.h  juce_startup.mm  jucebox_wrapper.cpp  jucebox_wrapper.h
PdChocolate/: @chocolate.sln  @chocolate.workspace.layout  README.md  chocolate.workspace  chocolate.workspace.layout
PdCoffee/: @coffee.sln  @coffee.workspace
Ressources/: pd_menus.tcl  yourclass.c
Sources/: CMakeLists.txt  Makefile.am  cicm_wrapper.h  eattr.c  eattr.h  ebox.c  ebox.h  eclass.c  eclass.h  ecolor.c  ecolor.h  ecommon.c  ecommon.h  edefine.h  edsp.c  edsp.h  eflags.c  eflags.h  egraphics.c  egraphics.h  egui.c  egui.h  eguicontext.h  eguiimp.h  elayer.c  elayer.h  enative.h  eobj.c  eobj.h  eparam.c  eparam.h  epath.c  epath.h  epd.h  epd_max.h  epdmax.h  epopup.c  epopup.h  epram.h  eproxy.c  (+10 more)
Sources/eattr/: eattr.h  eattr_attr.c  eattr_attr.cpp  eattr_getter.c  eattr_getter.cpp  eattr_new.c  eattr_new.cpp  eattr_setter.c  eattr_setter.cpp
Sources/ebox/: Makefile.am  ebox.c  ebox.cpp  ebox.h  ebox_attr.c  ebox_basic.c  ebox_draw.c  ebox_draw.cpp  ebox_dsp.c  ebox_handle.c  ebox_patcher.c  ebox_window.c  ebox_window.cpp
Sources/eclass/: Makefile.am  eclass.c  eclass.cpp  eclass.h  eclass_attrgetter.c  eclass_attrnew.c  eclass_attroptions.c  eclass_attrsetter.c  eclass_basic.c  eclass_widget.c
Sources/ecommon/: Makefile.am  d_ugen.c  d_ugen.h  d_ugen2.c  d_ugen2.h  d_ugen_old.c  eboxflag.h  ecommon.c  ecommon.cpp  ecommon.h  g_canvas.h  m_imp.h  m_pd.h  s_stuff.h
Sources/ecommon/pd-extented/: g_canvas.h  s_stuff.h
Sources/ecommon/pd-vanilla/: d_ugen.h
Sources/egraphics/: Makefile.am  TEst.h  egraphics.c  egraphics.cpp  egraphics.h  egraphics_clip.c  egraphics_clip.cpp  egraphics_clip_path.c  egraphics_clip_path.cpp  egraphics_clip_text.c  egraphics_color.c  egraphics_color.cpp  egraphics_forms.c  egraphics_forms.cpp  egraphics_matrix.c  egraphics_matrix.cpp  egraphics_paint.cpp  egraphics_path.cpp  egraphics_rotation.cpp  egraphics_text.c  egraphics_text.cpp
Sources/ejucebox/: ejucebox.h  ejucebox_basic.cpp  ejucebox_juce.cpp  ejucebox_opengl.cpp  ejucebox_startup.mm
Sources/eobj/: Makefile.am  eobj.h  eobj_basic.c  eobj_dsp.c  eobj_handle.c  eobj_proxy.c  eobj_router.c
Sources/epopup/: Makefile.am  epopup.c  epopup.cpp  epopup.h
Sources/erouter/: erouter.c  erouter.h
Sources/ewidget/: ewidget.c  ewidget.cpp  ewidget.h
Sources/juceBox/: jucebox_wrapper.cpp  jucebox_wrapper.h
SourcesDev/: epd_max.h  estruct.h
Temp/: efft.h
html/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022_source.html  a00024.html  a00024_source.html  a00026.html  a00026_source.html  a00028_source.html  a00030_source.html  a00032.html  a00032_source.html  a00033_source.html  a00035_source.html  a00036.html  a00036_source.html  annotated.html  classes.html  dir_26fbc93f06bf01ceac37d8add4b61c43.html  dir_3c5a06049573aa0fd43ee94c3b70e0dd.html  dir_8d99883be2838370319d597ab95b5bd5.html  dir_93f317233a77416eda207bc1b62b244d.html  (+9 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  groups_0.js  groups_1.js  pages_0.js  (+23 more)
(+1782 files in other folders)
