AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libCicmWrapper.la

libCicmWrapper_la_CFLAGS = @PD_CPPFLAGS@ -O3 -fPIC
libCicmWrapper_la_LDFLAGS = 
libCicmWrapper_la_LIBADD = 

libCicmWrapper_la_SOURCES = ecommon.c eobj.c ebox.c eclass.c epopup.c egraphics.c cicm_wrapper.h 

libCicmWrapperdir=$(pkglibdir)

