AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libebox.la

libebox_la_CFLAGS = @PD_CPPFLAGS@ -O2 -fPIC -fpermissive 
#~libebox_la_LDFLAGS = @PD_LDFLAGS@ -static -fPIC
libebox_la_LDFLAGS = 

libebox_la_SOURCES = ebox_attr.c \
ebox_basic.c \
ebox_draw.c \
ebox.h \
ebox_handle.c \
ebox_patcher.c \
ebox_window.c
