AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libeclass.la

libeclass_la_CFLAGS = @PD_CPPFLAGS@ -O2 -fPIC -fpermissive 
#~libeclass_la_LDFLAGS = @PD_LDFLAGS@ -static -fPIC
libeclass_la_LDFLAGS = 

libeclass_la_SOURCES = eclass_attrgetter.c \
eclass_attrnew.c \
eclass_attroptions.c \
eclass_attrsetter.c \
eclass_basic.c \
eclass.h \
eclass_widget.c
