AUTOMAKE_OPTIONS = foreign
noinst_LTLIBRARIES = libegraphics.la

libegraphics_la_CFLAGS = @PD_CPPFLAGS@ -O2 -fPIC -fpermissive 
#~libegraphics_la_LDFLAGS = @PD_LDFLAGS@ -static -fPIC
libegraphics_la_LDFLAGS =

libegraphics_la_SOURCES = egraphics.c \
egraphics_color.c \
egraphics_forms.c \
egraphics.h \
egraphics_matrix.c \
egraphics_text.c


